example/lib/src/generated/errors/errors_localization_bg.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Bulgarian (`bg`).
class ErrorsLocalizationBg extends ErrorsLocalization {
  ErrorsLocalizationBg([String locale = 'bg']) : super(locale);

  @override
  String get error => 'Възникна грешка';

  @override
  String get unexpectedError => 'Настъпи неочаквана грешка';

  @override
  String get bugReportSentText => 'Баг репортът е изпратен успешно.';
}
